# QWidget_Match_Highlights

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  recorddialog.cpp  recorddialog.h  server.cpp  server.h  videocutterwidget.cpp  videocutterwidget.h
